welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: type mismatch;
 found   : Array[Int]
 required: Int
  for(a<-1 to nums length-1){
              ^